# Darkelf-Shadow-CE

./: CHANGELOG.md  README.md  build-macos.sh  entitlements.plist  main.py  pyproject.toml
.github/workflows/: deploy.yml  python-app.yml
darkelf-shadow-7.0.0/: boot.py  browser.py  browser_features.py  browser_icons.py  browser_ui.py  darkelf_inspector.py  interceptor.py
darkelf-shadow-7.0.0/assets/: Darkelf.icns
darkelf-shadow-7.0.1/: browser_ui.py  darkelf_inspector.py  filters.py  interceptor.py  miniai.py  settings_pages.py  splash.py
darkelf-shadow-7.0.2/: boot.py  browser_features.py  darkelf_inspector.py  filters.py  miniai.py  settings_pages.py  splash.py
darkelf_shadow_ce_modules_v6.0.6/shadow/: browser.py  browser_ui.py
darkelf_shadow_ce_modules_v6.0.7/shadow/: browser.py  browser_icons.py  settings_dialog.py
shadow/: boot.py  browser.py  browser_features.py  darkelf_inspector.py  settings_dialog.py  settings_pages.py  splash.py
