 [build-system]
 requires = ["setuptools>=82.0.1"]
 build-backend = "setuptools.build_meta"
 
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["shadow*"]

[tool.setuptools.package-data]
shadow = [
    "assets/*.png",
    "assets/*.svg",
    "assets/*.ico",
    "assets/*.jpg",
]

 [project]
 name = "darkelf-shadow"
 version = "7.0.2"
 description = "Darkelf Shadow — Private hardened browser with MiniAI Sentinel"

 authors = [
     { name = "Dr. Kevin Moore" }
 ]

 readme = "README.md"
 license = { file = "LICENSE.md" }

 requires-python = ">=3.11"

 dependencies = [
     "PySide6>=6.5,<7",
 ]

 keywords = [
     "browser",
     "privacy",
     "security",
     "qt",
     "webengine",
 ]

 classifiers = [
     "Development Status :: 5 - Production/Stable",

     "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",

     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",

     "Operating System :: MacOS",
     "Operating System :: Microsoft :: Windows",
     "Operating System :: POSIX :: Linux",

     "Topic :: Security",
     "Topic :: Internet :: WWW/HTTP :: Browsers",
 ]

 [project.urls]
 Homepage = "https://github.com/Darkelf2024/darkelf-shadow"
 Repository = "https://github.com/Darkelf2024/darkelf-shadow"

 # Makes `darkelf-shadow` runnable from terminal
 [project.scripts]
 darkelf-shadow = "shadow.cli:main"

 [tool.ruff]
line-length = 127
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]
